// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxPaginationItem customize 1`] = `
<div>
  <li
    aria-current="page"
    class="page-item active disabled bazinga"
  >
    <h3
      class="page-link"
    >
      Test
    </h3>
  </li>
</div>
`;

exports[`loads and displays CxPaginationItem component 1`] = `
<div>
  <li
    class="page-item"
  >
    <a
      class="page-link"
    >
      Test
    </a>
  </li>
</div>
`;
